--- a/Semana_2/jinja/templates/perfil.html
+++ b/Semana_2/jinja/templates/perfil.html
@@ -1,5 +1,5 @@
 {% if logado %}
-    <p>Be,-vindo, { nome_usuario }</p>
+    <p>Bem-vindo, { nome_usuario }</p>
 {% else %}
     <p>Por favor, faça seu login para ver seu perfil!</p>
 {% endif %}   
